[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/WallsCollisions.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 21, 1.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 21, 1.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1.5, 21 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 1.5, 21 )

[node name="WallsCollisions" type="Node2D"]
script = ExtResource( 1 )

[node name="area_collision_up" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="collision" type="CollisionShape2D" parent="area_collision_up"]
position = Vector2( 0, -25.5 )
shape = SubResource( 6 )

[node name="area_collision_down" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="collision" type="CollisionShape2D" parent="area_collision_down"]
position = Vector2( 0, 25.5 )
shape = SubResource( 8 )

[node name="area_collision_right" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="collision" type="CollisionShape2D" parent="area_collision_right"]
position = Vector2( 25.5, 0 )
shape = SubResource( 7 )

[node name="area_collision_left" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="collision" type="CollisionShape2D" parent="area_collision_left"]
position = Vector2( -25.5, 0 )
shape = SubResource( 9 )

[connection signal="body_entered" from="area_collision_up" to="." method="_on_area_collision_up_body_entered"]
[connection signal="body_exited" from="area_collision_up" to="." method="_on_area_collision_up_body_exited"]
[connection signal="body_entered" from="area_collision_down" to="." method="_on_area_collision_down_body_entered"]
[connection signal="body_exited" from="area_collision_down" to="." method="_on_area_collision_down_body_exited"]
[connection signal="body_entered" from="area_collision_right" to="." method="_on_area_collision_right_body_entered"]
[connection signal="body_exited" from="area_collision_right" to="." method="_on_area_collision_right_body_exited"]
[connection signal="body_entered" from="area_collision_left" to="." method="_on_area_collision_left_body_entered"]
[connection signal="body_exited" from="area_collision_left" to="." method="_on_area_collision_left_body_exited"]
